--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
     "name": "vscode-angular2-files",
-    "displayName": "Angular Files",
-    "description": "Quickly scaffold angular file templates",
-    "version": "1.3.8",
+    "displayName": "Angular2 Files",
+    "description": "Quickly angular file templates",
+    "version": "1.0.0",
     "icon": "images/icon.png",
-    "publisher": "alexiv",
+    "publisher": "fedorax",
     "author": {
-        "name": "Alexander Ivanichev"
+        "name": "fedorax"
     },
     "engines": {
         "vscode": "^1.5.0"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/qwert789/vscode-angular2-files"
+        "url": "https://github.com/fedorax/vscode-angular2-files"
     },
     "bugs": {
-        "url": "https://github.com/qwert789/vscode-angular2-files/issues"
+        "url": "https://github.com/fedorax/vscode-angular2-files/issues"
     },
     "keywords": [
         "Angular 2",
@@ -40,8 +40,7 @@
     ],
     "main": "./out/src/extension",
     "contributes": {
-        "commands": [
-            {
+        "commands": [{
                 "command": "extension.addAngular2Component",
                 "title": "Generate Component"
             },
@@ -79,8 +78,7 @@
             }
         ],
         "menus": {
-            "explorer/context": [
-                {
+            "explorer/context": [{
                     "when": "",
                     "command": "extension.addAngular2Component",
                     "group": "Angular2"
